--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+revic <!DOCTYPE html>
 
 <html lang="en" dir="ltr">
 
@@ -22,8 +22,9 @@
     <aside><p>By: Harun Dizdarevic</p></aside>
 
     <section1>
-      <p>My name is Harun Dizdarevic, and I'm from Bosnia, i tis a little place,
-        in eastern Europe. My favorite foods are cevapi, and burek
+      <p>My name is Harun Dizdarevic, and I'm from Bosnia, it's a little place,
+        in eastern Europe. Some of my favorite cultural foods are cevapi, and burek
+
 
       </article>
       <article>
