--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
         harder than I thought it would be. I'm so far enjoying the schoolyear, because
         I've made new friends, and have classes with old ones from junior high.
 
+      <article>
+      </article>
+      <article>
       </article>
       In the future I hope to become a biomedical engineer. In order to get accepted into
       NAIT's program for biomedical enginneering I need to finish any math 30 course, and
       have either physics, or chemistry 30, and have 5 other courses above 80%. If I don't
-      enjoy the course i'll try to find something that I enjoy.
+      enjoy the course i'll try to find something that I enjoy. I would also want to get a
+      PHD because, I like the idea of people calling me doctor.
       <article>
         <!-- Example Mapped Image-->
         <blockquote cite="https://previews.123rf.com/images/trimbaldi/trimbaldi1309/trimbaldi130900007/23089796-wow-in-pop-art.jpg">
